--- a/Technikon-App-BackEnd/pom.xml
+++ b/Technikon-App-BackEnd/pom.xml
@@ -50,12 +50,17 @@
             <artifactId>java-dotenv</artifactId>
             <version>5.2.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webflux-api</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
-
+     <dependency>
+       <groupId>com.github.javafaker</groupId>
+     <artifactId>javafaker</artifactId>
+        <version>1.0.2</version>
+  </dependency>
     </dependencies>
 
     <build>
