--- a/Technikon-App-BackEnd/src/main/resources/application.properties
+++ b/Technikon-App-BackEnd/src/main/resources/application.properties
@@ -1,3 +1,23 @@
+#spring.application.name=Technikon
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#
+## Config Locations
+#spring.config.import=optional:file:.env[.properties]
+#
+## Database Properties
+#spring.datasource.url=${ENDPOINT}
+#spring.datasource.username=${USERNAME}
+#spring.datasource.password=${PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#
+## Other properties
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+
+
+server.port=8080
 spring.application.name=Technikon
 
 
@@ -13,3 +33,5 @@ spring.config.location=classpath:/,classpath:/config/,file:./,file:./src/main/re
 # Other properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui/index.html
