Changed from mock unit testing to integrated unit testing using a test db. Updated searchUser methods to return null if the isActive field is false (user deactivated).

--- a/Technikon-App-BackEnd/src/main/resources/application.properties
+++ b/Technikon-App-BackEnd/src/main/resources/application.properties
@@ -22,10 +22,21 @@ spring.application.name=Technikon
 
 
 
+
+
+# Default profile configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/Technikon
 spring.datasource.username=team2
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Test profile configuration
+spring.profiles.active=test
+spring.datasource.url.test=jdbc:postgresql://localhost:5400/Test
+spring.datasource.username.test=team2
+spring.datasource.password.test=1234
+spring.datasource.driver-class-name.test=org.postgresql.Driver
+
 
 #ENV
 spring.config.location=classpath:/,classpath:/config/,file:./,file:./src/main/resources/config/
