--- a/Technikon-App-BackEnd/pom.xml
+++ b/Technikon-App-BackEnd/pom.xml
@@ -98,6 +98,11 @@
             <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+
     </dependencies>
 
 
