Team Changes to Property Feature

--- a/Technikon-App-BackEnd/src/main/resources/application.properties
+++ b/Technikon-App-BackEnd/src/main/resources/application.properties
@@ -1,11 +1,44 @@
+#spring.application.name=Technikon
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#
+## Config Locations
+#spring.config.import=optional:file:.env[.properties]
+#
+## Database Properties
+#spring.datasource.url=${ENDPOINT}
+#spring.datasource.username=${USERNAME}
+#spring.datasource.password=${PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#
+## Other properties
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+
+
+
 spring.application.name=Technikon
+server.port = 8080
+#http://localhost:8080/swagger-ui/index.html#
 
 
 
+
+
+# Default profile configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/Technikon
 spring.datasource.username=team2
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Test profile configuration
+spring.profiles.active=test
+spring.datasource.url.test=jdbc:postgresql://localhost:5400/Test
+spring.datasource.username.test=team2
+spring.datasource.password.test=1234
+spring.datasource.driver-class-name.test=org.postgresql.Driver
+
 
 #ENV
 spring.config.location=classpath:/,classpath:/config/,file:./,file:./src/main/resources/config/
@@ -13,3 +46,5 @@ spring.config.location=classpath:/,classpath:/config/,file:./,file:./src/main/re
 # Other properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui/index.html
