added authentication with JWT with username and password, added extra fields in authorisation of id and tin to help filter out Users during crud operations to the same user in the DB call

--- a/Technikon-App-BackEnd/src/main/resources/application.properties
+++ b/Technikon-App-BackEnd/src/main/resources/application.properties
@@ -46,3 +46,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui/index.html
+jwt.secret=mySecretKey
+jwt.minutes=60
