--- a/Technikon-App-BackEnd/src/main/resources/application.properties
+++ b/Technikon-App-BackEnd/src/main/resources/application.properties
@@ -19,7 +19,8 @@
 
 server.port=5001
 spring.application.name=Technikon
-
+jwt.secret=mySuperDuperSecretKeyTheOneKeyToRuleThemAll
+jwt.minutes=60
 
 
 
@@ -46,5 +47,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui/index.html
-jwt.secret=mySecretKey
-jwt.minutes=60
+
