--- a/Technikon-FrontEnd/package.json
+++ b/Technikon-FrontEnd/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
