--- a/Technikon-FrontEnd/package.json
+++ b/Technikon-FrontEnd/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
