--- a/Technikon-FrontEnd/package.json
+++ b/Technikon-FrontEnd/package.json
@@ -18,11 +18,13 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.7.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mui": "^0.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11"
